--- a/Toy-Project2_EGov/pom.xml
+++ b/Toy-Project2_EGov/pom.xml
@@ -147,12 +147,26 @@
 			<version>2.3.2</version>
 		</dependency>
         
-        <!-- @RequestBody 설정을 위해 추가 -->
+        <!-- @RequestBody 사용하기 위해 추가 -->
         <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.6.7</version>
 		</dependency>
+		
+		<!-- 파일 업로드 사용하기 위해 추가 -->
+		<dependency>
+  			<groupId>commons-fileupload</groupId>
+  			<artifactId>commons-fileupload</artifactId>
+  			<version>1.3.1</version>
+		</dependency>
+
+		<dependency>
+  			<groupId>commons-io</groupId>
+  			<artifactId>commons-io</artifactId>
+  			<version>2.5</version>
+		</dependency>
+		<!-- 파일 업로드 사용하기 위해 추가 -->
         
         <!-- mysql이나 oracle DB 사용시 아래 설정 추가 -->
 		<!--         
